2008-08-17  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-add-local-hook): Renamed from add-local-hook.
	(slime-switch-to-output-buffer): Drop the connection argument.  It
	was never used.
	(slime-switch-to-output-buffer-search-all-frames): Deleted. Use
	display-buffer-reuse-frames instead.
	(slime-switch-to-output-buffer): Use pop-to-buffer to select the
	window and frame.  Have to set the input-focus manually, though.
	Might be some window manager issue.

2008-08-15  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-switch-to-output-buffer): Fix regression
	discovered by Ariel Badichi. Programmatic invocation of this
	function expect this function to also set-buffer to the REPL
	buffer. Even though that's ugly, we do it for now, and declare it
	to be a FIXME.
	(slime-dispatch-event): Don't use `message' for the pipelined
	request message, but `slime-display-oneliner' which will truncate
	the form to be displayed.

2008-08-17  Helmut Eller  <heller@common-lisp.net>

	* swank-cmucl.lisp (waitpid): Don't use unix::pid-t, it's only
	defined for Linux.

	* swank-sbcl.lisp (sb-thread::get-foreground): Don't override.
	Let SBCL people fix this.

2008-08-17  B.Scott Michel <scooter.phd@gmail.com>

	* swank-loader.lisp (dump-image): Move this function to the end of
	the file to stop SBCL from reporting two times the same false
	alarm.

2008-08-15  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-popup-buffer-quit): Fix regression; we have to
	invoke `bury-buffer' without an argument to make it switch buffers
	for us (for the case when the snapshot wasn't restored.)

2008-08-15  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-list-compiler-notes): Only shrink if notes tree
	isn't displayed as being collapsed.

2008-08-15  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-popup-buffer-quit): If not kill, then at least
	bury the buffer.
	(slime-list-compiler-notes): Shrink the compiler-notes window.
