@@ -1,13 +1,19 @@
 2008-08-17  Helmut Eller  <heller@common-lisp.net>
 
+	* slime.el (slime-inspector-show-source): New command.
+	(slime-inspector-mode-map): Bind it to ".".
+	(sldb-highlight-sexp): Use slime-flash-region rather than a
+	permanent overlay.
+
+	* swank.lisp (find-source-location-for-emacs): New function.
+
 	* slime.el (slime-add-local-hook): Renamed from add-local-hook.
 	(slime-switch-to-output-buffer): Drop the connection argument.  It
 	was never used.
 	(slime-switch-to-output-buffer-search-all-frames): Deleted. Use
 	display-buffer-reuse-frames instead.
 	(slime-switch-to-output-buffer): Use pop-to-buffer to select the
-	window and frame.  Have to set the input-focus manually, though.
-	Might be some window manager issue.
+	window and frame.
 
 2008-08-15  Tobias C. Rittweiler  <tcr@freebits.de>
 
